# auto_bot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  auto_bot.service  backtest_results_20260122_150353.json  backtest_results_20260122_150634.json  backtest_results_20260126_151311.json  backtest_results_20260128_081833.json  backtest_results_20260128_165009.json  backtest_results_20260128_203232.json  backtest_results_20260128_220625.json  backtest_results_20260129_071155.json  example.env  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
data/: price_history.json  test_volatile_events.json
keys/: private_key.pem
scripts/: README_TESTING.md  analyze_logs.py  analyze_performance.py  analyze_price_history.py  analyze_tradeability.py  backtest_from_saved_data.py  backtest_open_markets.py  backtest_test_data.py  check_backtest_data.py  check_history_depth.py  check_market_lifespans.py  check_price_fields.py  dashboard.py  debug_api_response.py  debug_backtest.py  debug_market_filtering.py  debug_markets.py  generate_test_data.py  monitor_and_save.py  monitor_bot.py  monitor_long_lived_markets.py  monitor_spikes.py  monitor_spikes_adaptive.py  monitor_stable_markets.py  optimize_parameters.py  pre_deploy_check.py  quick_test.py  run_backtest.py  run_tests.sh  test_backtest.py  test_mispricing_live.py  test_notification.py  validate_market_data.py  verify_price_history.py
src/: compare_platforms.py  config.py  example.env  logger.py  notification_manager.py
tests/: conftest.py  test_api_data_validation.py  test_end_to_end.py  (+16 more)
(+57 files in other folders)
